
Bugs fixed: 
- 3495804 Cleanup: httpProcId still defined, wrong define in cimXmlGen
- 3516167 Force kill sfcbd on stop if needed
- 2966659 Cleanup https daemon remnants
- 3527674 Faster Startup
- 3529879 Fixes for sfcb-ps test script
- 3527714 Every other EnumerateClasses fails
- 3541554 insecure LD_LIBRARY_PATH usage
- 3546279 Core dump in providerDrv on Qualifier not found

Changes in 1.4.2
================

Everything in 1.3.12, plus: 


New features:
- 3280992 Add systemd file to SFCB sources
- 3177587 create sfcCommon (SFCB 1.4 now requires sfcCommon lib to be installed)
- 3309374 Implement CIM_CIMXMLCommunicationMechanism
- 3259627 provide a list acceptable CAs to client
- 3310364 Implement CIM_NamespaceInManager
- 3274893 For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.

Bugs fixed: 
- 3199899 sfcb uninstall process should remove test mof's 
- 3300167 Memory leaks caused by cimRequest changes
- 3101157 Failed to enable provider timing analysis with SfcbLocal
- 3310192 32bit sfcbmof fails to run x86_64

Changes in 1.4.1
================

New features:
- 3152523 Changes for footprinting in ABT 
- 1596336 Add config option for network interface binding

Bugs fixed: 

Everything in 1.3.11, plus:

- 3022940 Remove dead SLP code dealing with proc management
- 3175888 Remove JDBC support from SFCB 1.4.x
- 3082573 Typo in interopProvider
- 3177707 ExecQuery 1 to 4 tests segfault on power LPAR
- 3185034 exec query test failures on power - char16 mismatch
- 2990315 cmciRelease not called in case of error
- 3206663 Enum CQL filter on NULL cause segfault and incorrect rsp

Changes in 1.4.0
================

New features:
- 3014530 configure option for request
- 3030289 Update wbemcat to make REST requests
- 3031827 Parser does not create BinRequestContext
- 3056234 Allow multiple parsers
- 3095225 Implement Simple REST Requests

Bugs fixed:

Everything in 1.3.10, plus:

- 3130727 CMPIPropertyMIFT.setProperty() missing objectpath keys